fixed spacing on mobile social profiles and pagination module

--- a/static/css/timetable/social.css
+++ b/static/css/timetable/social.css
@@ -7,7 +7,6 @@
 #social-pro-pic {
     height: 30px;
     width: 30px;
-    margin-right: 10px;
     background-color: #ddd;
     border-radius: 100%;
     display: inline-block;
@@ -24,6 +23,7 @@
     vertical-align: middle;
     display: inline-block;
     cursor: pointer;
+    margin-left: 10px;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -147,4 +147,12 @@ a#social-login:hover:before {
 #social-dropdown .tip {
     top: -7px;
     right: 10px;
+}
+@media (max-width: 766px) {
+    #social-pro-pic {
+        margin-right: 5px;
+    }
+    #social h2 {
+        display: none;
+    }
 }
